# aimer

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
aimer-core/: pyproject.toml
aimer-core/src/aimer_core/: __init__.py  schema.py
aimer-core/tests/: test_schema.py
docs/: architecture.md
duplex-bridge/: pyproject.toml
duplex-bridge/src/duplex_bridge/: __init__.py  __main__.py  server.py  session.py
duplex-bridge/src/duplex_bridge/providers/: __init__.py  gemini_live.py
duplex-bridge/tests/: conftest.py  test_e2e_smoke.py  test_gemini_live.py  test_server.py  test_session.py
jointer-core/: pyproject.toml
jointer-core/src/jointer_core/: __init__.py  schema.py
jointer-core/tests/: test_schema.py
pointer-agent/: pyproject.toml
pointer-agent/src/pointer_agent/: __init__.py  __main__.py  telemetry.py  transport.py
pointer-agent/src/pointer_agent/capture/: __init__.py  base.py  debounce.py
pointer-agent/src/pointer_agent/capture/linux/: __init__.py
pointer-agent/src/pointer_agent/capture/macos/: __init__.py  accessibility.py  cursor.py  screen.py  window.py
pointer-agent/src/pointer_agent/capture/windows/: __init__.py
pointer-agent/tests/: conftest.py  test_capture.py  test_capture_tile_latency.py  test_debounce.py  test_screen.py  test_telemetry.py  test_transport.py
pointer-extension/: README.md  manifest.json
