[project]
name = "aimer-workspace"
version = "0.1.0"
description = "Workspace root for Aimer."
requires-python = ">=3.10"
license = { text = "LicenseRef-Proprietary" }
classifiers = [
    "License :: Other/Proprietary License",
    "Private :: Do Not Upload",
]
dependencies = [
    "aimer-core",
    "duplex-bridge",
    "pointer-agent",
]

[tool.uv]
package = false

[tool.uv.sources]
aimer-core = { workspace = true }
duplex-bridge = { workspace = true }
pointer-agent = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
]

[tool.uv.workspace]
members = [
    "aimer-core",
    "pointer-agent",
    "duplex-bridge",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-q -m 'not benchmark'"
asyncio_mode = "auto"
markers = [
    "benchmark: opt-in performance tests (run with `pytest -m benchmark`)",
]
testpaths = [
    "aimer-core/tests",
    "pointer-agent/tests",
    "duplex-bridge/tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "aimer-core/src",
    "pointer-agent/src",
    "duplex-bridge/src",
]

[[tool.mypy.overrides]]
module = [
    "AppKit",
    "ApplicationServices",
    "Quartz",
    "ScreenCaptureKit",
]
ignore_missing_imports = true
