[project]
name = "duplex-bridge"
version = "0.1.0"
description = "Jointer bridge from visual context packets to duplex model sessions."
requires-python = ">=3.10"
dependencies = [
    "jointer-core",
    "websockets>=15.0.1",
]

[project.scripts]
duplex-bridge = "duplex_bridge.__main__:main"

[tool.uv.sources]
jointer-core = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
